tests/errors/undefined-macro.spcasm
macro something
endmacro

%something_else()
